Document numerical damping
(and move manual/manulal.rst to manual/index.rst so that index.html is
used on webserver)

--- a/sphinx2/source/references.bib
+++ b/sphinx2/source/references.bib
@@ -535,3 +535,16 @@
   url = {http://thescipub.com/pdf/10.3844/jmssp.2005.8.11}
 }
 
+
+@InProceedings{Addetta2001,
+	author = "G.A. {D'Addetta} and F. {Kun} and E. {Ramm} and H.J. {Herrmann}",
+	title = "{From solids to granulates - Discrete element simulations of fracture and fragmentation processes in geomaterials.}",
+	booktitle = "Continuous and Discontinuous Modelling of Cohesive-Frictional Materials",
+	year = 2001,
+	series = "Lecture Notes in Physics, Berlin Springer Verlag",
+	volume = 568,
+	editor = "{P.A. Vermeer, S. Diebels, W. Ehlers, H.J. Herrmann, S. Luding, E. Ramm}",
+	pages = "231--+",
+	url = "http://www.comphys.ethz.ch/hans/p/267.pdf"
+}
+
