--- a/sphinx2/source/references.bib
+++ b/sphinx2/source/references.bib
@@ -507,7 +507,7 @@
 	year = "2006",
 	note = "",
 	issn = "0020-7683",
-	doi = "DOI: 10.1016/j.ijsolstr.2006.06.032",
+	doi = "10.1016/j.ijsolstr.2006.06.032",
 	url = "http://www.sciencedirect.com/science/article/B6VJS-4K8NWXK-1/2/e3a41b693b156ce13a70e44e973d505f",
 }
 
@@ -521,7 +521,7 @@
 	year = "2003",
 	note = "Advanced Computational Models and Techniques in Dynamics",
 	issn = "0045-7949",
-	doi = "DOI: 10.1016/S0045-7949(03)00043-9"
+	doi = "10.1016/S0045-7949(03)00043-9"
 }
 
 @article{Tonon2005,
@@ -546,5 +546,19 @@
 	editor = "{P.A. Vermeer, S. Diebels, W. Ehlers, H.J. Herrmann, S. Luding, E. Ramm}",
 	pages = "231--+",
 	url = "http://www.comphys.ethz.ch/hans/p/267.pdf"
+}
+
+
+@article{Luding2008,
+  title={Cohesive, frictional powders: contact models for tension},
+  author={Luding, Stefan},
+  journal={Granular matter},
+  volume={10},
+  number={4},
+  pages={235--246},
+  year={2008},
+  publisher={Springer},
+  url="http://link.springer.com/content/pdf/10.1007%2Fs10035-008-0099-x.pdf"
+  doi = "10.1007/s10035-008-0099-x",
 }
 
