Fixes in building

--- a/sphinx2/source/references.bib
+++ b/sphinx2/source/references.bib
@@ -558,7 +558,7 @@
   pages={235--246},
   year={2008},
   publisher={Springer},
-  url="http://link.springer.com/content/pdf/10.1007%2Fs10035-008-0099-x.pdf"
-  doi = "10.1007/s10035-008-0099-x",
+  url="http://link.springer.com/content/pdf/10.1007\%2Fs10035-008-0099-x.pdf",
+  doi = "10.1007/s10035-008-0099-x"
 }
 
